--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     tools:context="com.viseator.hackinit20_1.activity.MainActivity">
 
     <include
@@ -12,6 +13,40 @@
         layout="@layout/toolbar"
         />
 
+    <ImageView
+        android:id="@+id/main_imageview"
+        android:layout_below="@+id/main_toolbar"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="30dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_above="@+id/bottom_select"/>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="60dp"
+        >
+
+        <ImageView
+            android:id="@+id/child_status"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/icon_status"
+            />
+
+        <TextView
+            android:textColor="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/child_status"
+            android:text="孩子状态"
+            />
+    </RelativeLayout>
     <RelativeLayout
         android:id="@+id/monitor_behavior"
         android:layout_width="wrap_content"
@@ -23,14 +58,17 @@
 
         <ImageView
             android:id="@+id/monitor_game_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/icon_manage"
             />
 
         <TextView
+            android:textColor="@color/white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
             android:layout_below="@+id/monitor_game_image"
             android:text="行为监护"
             />
@@ -48,54 +86,79 @@
 
         <ImageView
             android:id="@+id/monitor_behavior_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/game_icon"
             />
 
         <TextView
             android:layout_width="wrap_content"
+            android:textColor="@color/white"
+            android:layout_centerHorizontal="true"
             android:layout_height="wrap_content"
             android:layout_below="@+id/monitor_behavior_image"
             android:text="手势监控"
             />
     </RelativeLayout>
 
-    <GridLayout
+    <LinearLayout
         android:id="@+id/bottom_select"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="10dp"
-        android:columnCount="2"
-        android:background="@color/gray"
-        android:rowCount="1"
         >
 
-        <ImageView
-            android:layout_width="190dp"
-            android:layout_marginLeft="3dp"
-            android:layout_marginTop="3dp"
-            android:layout_marginBottom="3dp"
+        <RelativeLayout
+            android:background="@color/colorPrimaryDark"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_column="0"
-            android:src="@mipmap/ic_launcher"
-            android:id="@+id/input_text"
-            android:background="@color/white"
-            />
+            android:layout_weight="1">
 
-        <ImageView
-            android:layout_width="190dp"
+            <ImageView
+                android:id="@+id/input_text"
+                android:layout_width="wrap_content"
+                android:background="@color/colorPrimaryDark"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:src="@drawable/icon_word"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/input_text"
+                android:layout_centerHorizontal="true"
+                android:background="@color/colorPrimaryDark"
+                android:text="文字"
+                android:textColor="@color/white"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_column="1"
-            android:background="@color/white"
-            android:layout_marginTop="3dp"
-            android:layout_marginLeft="3dp"
-            android:layout_marginRight="3dp"
-            android:src="@mipmap/ic_launcher"
-            android:id="@+id/input_voice"
-            />
-    </GridLayout>
+            android:background="@color/colorPrimaryDark"
+            android:layout_weight="1">
+
+            <ImageView
+                android:id="@+id/input_voice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimaryDark"
+                android:layout_centerInParent="true"
+                android:src="@drawable/icon_voice"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/input_voice"
+                android:layout_centerHorizontal="true"
+                android:background="@color/colorPrimaryDark"
+                android:text="语音"
+                android:textColor="@color/white"/>
+        </RelativeLayout>
+    </LinearLayout>
 
 
 </RelativeLayout>
