--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,40 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content"
+              android:layout_height="48dp"
+                android:background="@color/colorPrimaryDark"
               android:orientation="horizontal">
     <ImageView
         android:layout_width="30dp"
+        android:background="@color/colorPrimaryDark"
         android:layout_height="30dp"
-        android:layout_marginLeft="5dp"
+        android:layout_marginLeft="15dp"
         android:layout_marginTop="5dp"
-        android:src="@mipmap/ic_launcher"
+        android:layout_centerVertical="true"
+        android:src="@drawable/me_icon"
         android:id="@+id/pop_setting"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="这是标题"
+        android:background="@color/colorPrimaryDark"
+        android:text="爱彼伴"
         android:id="@+id/title_toolbar"
-        android:layout_centerHorizontal="true"
+        android:textColor="#ffffff"
+        android:layout_centerInParent="true"
         android:layout_marginTop="5dp"
-        android:textSize="18dp"
+        android:textSize="24dp"
         />
 
     <ImageView
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:src="@mipmap/ic_launcher"
-        android:layout_marginLeft="80dp"
+        android:background="@color/colorPrimaryDark"
+        android:src="@drawable/icon_alarm"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="55dp"
+        android:layout_centerVertical="true"
         android:layout_marginTop="5dp"
         android:id="@+id/pop_notification"
-        android:layout_toRightOf="@+id/title_toolbar"/>
+        />
     <ImageView
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_alignParentRight="true"
-        android:src="@mipmap/ic_launcher"
-        android:layout_marginRight="5dp"
+        android:src="@drawable/icon_message"
+        android:background="@color/colorPrimaryDark"
+        android:layout_marginRight="15dp"
+        android:layout_centerVertical="true"
         android:layout_marginTop="5dp"
         android:id="@+id/pop_message"
         />
