--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#d6e5eb</color>
+    <color name="colorPrimaryDark">#7fc2de</color>
     <color name="colorAccent">#FF4081</color>
     <color name="gray">#6e6d6e</color>
+    <color name="background">#d6e5eb</color>
     <color name="white">#ffffff</color>
 </resources>
