add show dialog

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -110,7 +110,9 @@
         >
 
         <RelativeLayout
+            android:clickable="true"
             android:background="@color/colorPrimaryDark"
+            android:id="@+id/send_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1">
