--- a/app/src/main/res/layout/fragment_month.xml
+++ b/app/src/main/res/layout/fragment_month.xml
@@ -46,9 +46,10 @@
             />
 
         <android.support.v7.widget.RecyclerView
+            android:background="@color/white"
             android:id="@+id/game_record_list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginTop="25dp"/>
     </RelativeLayout>
 </RelativeLayout>
