--- a/app/src/main/res/layout/activity_contact_record.xml
+++ b/app/src/main/res/layout/activity_contact_record.xml
@@ -10,23 +10,28 @@
     <RelativeLayout
         android:id="@+id/contact_record_toolbar"
         android:layout_width="match_parent"
+        android:background="@color/colorPrimaryDark"
         android:layout_height="wrap_content"
         >
 
         <ImageView
             android:id="@+id/back_image"
+            android:background="@color/colorPrimaryDark"
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:layout_centerVertical="true"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
-            android:src="@mipmap/ic_launcher"
+            android:src="@drawable/icon_return"
             />
 
         <TextView
             android:id="@+id/title_toolbar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@color/colorPrimaryDark"
             android:layout_centerHorizontal="true"
+            android:textColor="@color/white"
             android:layout_marginTop="5dp"
             android:text="亲子交互集"
             android:textSize="18dp"
