--- a/app/src/main/res/layout/fragment_this_week.xml
+++ b/app/src/main/res/layout/fragment_this_week.xml
@@ -7,25 +7,25 @@
 
 
     <TextView
-        android:id="@+id/game_hour_all"
+        android:id="@+id/game_hour_all_week"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         />
 
-    <TextView
-        android:id="@+id/game_hour_record"
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/game_hour_all"
-        android:layout_marginTop="10dp"
-        android:text="今日游戏记录: "
+        android:layout_below="@+id/game_hour_all_week"
+        android:id="@+id/hour_list_week"
+        android:layout_marginLeft="10dp"
+        android:background="@color/gray"
         />
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/game_hour_record"
+        android:layout_below="@+id/hour_list_week"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
