--- a/app/src/main/res/layout/fragment_today_data.xml
+++ b/app/src/main/res/layout/fragment_today_data.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:text="今日游戏时长: "
         />
 
     <TextView
