--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,63 @@
         layout="@layout/toolbar"
         />
 
+    <android.support.v7.widget.CardView
+        android:visibility="gone"
+        android:id="@+id/cardview"
+        app:elevation="4dp"
+        app:cardCornerRadius="4dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        android:background="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="60dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:background="@color/white"
+            android:layout_height="match_parent">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:id="@+id/dot1"
+                android:layout_height="wrap_content"
+                android:src="@drawable/dot"
+                android:background="@color/white"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="40dp"
+                />
+            <TextView
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/dot1"
+                android:id="@+id/text1"
+                android:layout_marginStart="10dp"
+                android:background="@color/white"
+                android:text="孩子手机状态"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:id="@+id/dot2"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/text1"
+                android:layout_marginLeft="40dp"
+                android:src="@drawable/dot_1"
+                android:background="@color/white"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="40dp"
+                />
+            <TextView
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/dot2"
+                android:layout_marginStart="10dp"
+                android:background="@color/white"
+                android:text="孩子游戏状态"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </RelativeLayout>
+
+    </android.support.v7.widget.CardView>android:visibility="gone"
+
 
     <ImageView
         android:id="@+id/main_imageview"
@@ -35,6 +92,7 @@
         <ImageView
             android:id="@+id/child_status"
             android:layout_width="40dp"
+            android:clickable="true"
             android:layout_height="40dp"
             android:layout_centerHorizontal="true"
             android:src="@drawable/icon_status"
