--- a/app/src/main/res/layout/activity_monitor_game.xml
+++ b/app/src/main/res/layout/activity_monitor_game.xml
@@ -7,6 +7,7 @@
     <RelativeLayout
         android:id="@+id/monitor_game_toolbar"
         android:layout_width="match_parent"
+        android:background="@color/backgroundtop"
         android:layout_height="wrap_content"
         >
 
