--- a/app/src/main/res/layout/fragment_this_week.xml
+++ b/app/src/main/res/layout/fragment_this_week.xml
@@ -25,6 +25,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/game_hour_all_week"
         android:layout_marginTop="10dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:background="@color/white"
         />
 
