--- a/app/src/main/res/layout/game_record.xml
+++ b/app/src/main/res/layout/game_record.xml
@@ -8,6 +8,7 @@
         android:id="@+id/blue_ball"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
         android:layout_marginLeft="10dp"
         android:src="@drawable/blue_ball"
         />
@@ -34,6 +35,7 @@
         android:layout_below="@+id/time_text"
         android:layout_toRightOf="@+id/blue_ball"
         android:layout_marginLeft="12dp"
+        android:id="@+id/game_info"
         android:layout_marginTop="10dp"
         android:text="打开阴阳师"/>
 </RelativeLayout>
