--- a/app/src/main/res/layout/fragment_record_voice.xml
+++ b/app/src/main/res/layout/fragment_record_voice.xml
@@ -3,7 +3,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="150dp"
-                android:background="@color/gray_white"
+                android:background="@color/background"
                 android:orientation="vertical">
 
     <ImageView
