--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -114,6 +114,7 @@
         <RelativeLayout
             android:background="@color/colorPrimaryDark"
             android:layout_width="0dp"
+            android:id="@+id/input_text_layout"
             android:layout_height="wrap_content"
             android:layout_weight="1">
 
