--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="yellow">#F99503</color>
     <color name="backgroundtop">#2e8ed4</color>
     <color name="back_week">#8ca6ca</color>
+    <color name="record_back">#64d6e5eb</color>
 </resources>
