--- a/app/src/main/res/layout/fragment_month.xml
+++ b/app/src/main/res/layout/fragment_month.xml
@@ -1,46 +1,56 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:context="com.viseator.hackinit20_1.fragments.MonthFragment">
+                android:background="@color/background"
+                tools:context="com.viseator.hackinit20_1.fragments.TodayDataFragment">
+
 
     <TextView
         android:id="@+id/game_hour_all_month"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:background="@color/white"
+        android:paddingBottom="5dp"
+        android:paddingLeft="10dp"
+        android:paddingTop="5dp"
+        android:text="本月游戏时长： 8h"
         />
 
-    <CalendarView
-        android:id="@+id/carlendar_view"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/hour_list_month"
         android:layout_width="match_parent"
-        android:layout_height="310dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/game_hour_all_month"
         android:layout_marginTop="10dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:background="@color/white"
         />
 
-    <TextView
-        android:id="@+id/game_record_month"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/carlendar_view"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
-        android:text="本月游戏记录"
-        />
+        android:layout_below="@id/hour_list_week"
+        android:layout_marginTop="25dp"
+        android:background="@color/white"
+        >
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/carlendar_view"
-        android:layout_marginTop="40dp">
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/record_list_month"
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
+            android:paddingLeft="10dp"
+            android:text="本月游戏记录"
             />
-    </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/game_record_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            />
+    </RelativeLayout>
 </RelativeLayout>
