--- a/app/src/main/res/layout/fragment_month.xml
+++ b/app/src/main/res/layout/fragment_month.xml
@@ -33,10 +33,9 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/hour_list_week"
+        android:layout_below="@id/hour_list_month"
         android:layout_marginTop="25dp"
-        android:background="@color/white"
-        >
+        android:background="@color/white">
 
         <TextView
             android:layout_width="match_parent"
@@ -50,7 +49,6 @@
             android:id="@+id/game_record_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            />
+            android:layout_marginTop="25dp"/>
     </RelativeLayout>
 </RelativeLayout>
