--- a/app/src/main/res/layout/activity_remind.xml
+++ b/app/src/main/res/layout/activity_remind.xml
@@ -19,7 +19,7 @@
             android:layout_height="30dp"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
-            android:src="@mipmap/ic_launcher"
+            android:src="@drawable/icon_return"
             />
 
         <TextView
@@ -34,12 +34,12 @@
 
     </RelativeLayout>
 
-    <com.viseator.hackinit20_1.view.SideView
-        android:id="@+id/side_view"
-        android:layout_width="30dp"
-        android:layout_below="@+id/remind_toolbar"
-        android:layout_height="match_parent"
-        />
+    <!--<com.viseator.hackinit20_1.view.SideView-->
+        <!--android:id="@+id/side_view"-->
+        <!--android:layout_width="30dp"-->
+        <!--android:layout_below="@+id/remind_toolbar"-->
+        <!--android:layout_height="match_parent"-->
+        <!--/>-->
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/remind_list"
@@ -48,7 +48,6 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:layout_below="@+id/remind_toolbar"
-        android:layout_toRightOf="@+id/side_view"
 
         />
 
