--- a/app/src/main/res/layout/activity_monitor_game.xml
+++ b/app/src/main/res/layout/activity_monitor_game.xml
@@ -17,7 +17,7 @@
             android:layout_height="30dp"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
-            android:src="@mipmap/ic_launcher"
+            android:src="@drawable/icon_return"
             />
 
         <TextView
