--- a/app/src/main/res/layout/fragment_record_voice.xml
+++ b/app/src/main/res/layout/fragment_record_voice.xml
@@ -34,7 +34,7 @@
     </android.support.v7.widget.CardView>
 
     <Button
-        android:id="@+id/peoview_btn"
+        android:id="@+id/negtive_btn"
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:layout_below="@+id/card_edit_text"
