--- a/app/src/main/res/layout/fragment_record_voice.xml
+++ b/app/src/main/res/layout/fragment_record_voice.xml
@@ -1,28 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="200dp"
                 android:layout_marginTop="150dp"
                 android:background="@color/record_back"
                 android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/record_image"
-        android:layout_width="380dp"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:src="@mipmap/ic_launcher"
-        />
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_edit_text"
-        android:layout_width="300dp"
-        android:layout_height="200dp"
-        android:layout_below="@+id/record_image"
+        android:layout_width="230dp"
+        android:layout_height="100dp"
         android:layout_marginLeft="40dp"
         android:layout_marginTop="10dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="5dp"
         >
+
+        <TextView
+            android:id="@+id/receive_message"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="invisible"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            />
 
         <EditText
             android:id="@+id/edit_text_voice"
@@ -30,6 +33,8 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
+            android:background="@null"
+
             />
     </android.support.v7.widget.CardView>
 
@@ -40,26 +45,19 @@
         android:layout_below="@+id/card_edit_text"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
-        android:text="预览"
-
+        android:background="@drawable/button_middle_b"
+        android:text="取消"
         />
 
     <Button
         android:id="@+id/send_voice_btn"
         android:layout_width="100dp"
         android:layout_height="50dp"
-        android:layout_alignParentRight="true"
         android:layout_below="@+id/card_edit_text"
-        android:layout_marginRight="50dp"
+        android:layout_marginLeft="90dp"
         android:layout_marginTop="20dp"
+        android:layout_toRightOf="@+id/negtive_btn"
+        android:background="@drawable/button_middle_b"
         android:text="发送"
-        />
-
-    <ImageView
-        android:id="@+id/record_image_view"
-        android:layout_width="380dp"
-        android:layout_height="50dp"
-        android:layout_below="@+id/send_voice_btn"
-        android:src="@mipmap/ic_launcher"
         />
 </RelativeLayout>
